Updated the footer

--- a/contact.html
+++ b/contact.html
@@ -33,14 +33,18 @@
                 <input class="input1" type="text" id="name">
                 <label class="formText">Email</label>
                 <input class="input1" type="text" id="email">
-                <br>
                 <label class="formText">Message</label>
-                <input class="input2" type="textbox" id="message">
+                <br>
+                <textarea rows="5" cols="100"></textarea>
+                <br>
+                <button class="button" >Submit</button>
             </form>
-        </div>
+        </div>  
      </div>
 
 </body>
-
+<footer class="footer">
+    <p>Copyright ©</p>      
+</footer>
 </html>
 
