--- a/portfolio.html
+++ b/portfolio.html
@@ -30,34 +30,35 @@
 
         <div class="p1"> 
             <div class="portfolioImageContainer">
-                <div class="portfolioTextColor">test</div>
+                <div class="portfolioTextColor">Hangman</div>
                     <img class="portfolioImage" src="assets/images/technics-q-c-640-480-1.jpg"></img>
             </div>
 
             <div class="portfolioImageContainer">
-                <div class="portfolioTextColor">test</div>
+                <div class="portfolioTextColor">RPG Game</div>
                     <img class="portfolioImage" src="assets/images/technics-q-c-640-480-2.jpg"></img>
             </div>
 
             <div class="portfolioImageContainer">
-                <div class="portfolioTextColor">test</div>
+                <div class="portfolioTextColor">Trivia Game</div>
                     <img class="portfolioImage" src="assets/images/technics-q-c-640-480-5.jpg"></img>
             </div>
 
             <div class="portfolioImageContainer">
-                <div class="portfolioTextColor">test</div>
+                <div class="portfolioTextColor">Rutgers Info Widget</div>
                     <img class="portfolioImage" src="assets/images/technics-q-c-640-480-7.jpg"></img>
             </div>
             
             <div class="portfolioImageContainer">
-                <div class="portfolioTextColor">test</div>
+                <div class="portfolioTextColor">Rock Paper Scissors</div>
                     <img class="portfolioImage" src="assets/images/technics-q-c-640-480-9.jpg"></img>
             </div>
         </div>
-    
      </div>
 
 </body>
-
+<footer class="footer">
+    <p>Copyright ©</p>      
+</footer>
 </html>
 
