--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
    
 </body>
 <div class="content"></div>
-<footer class="footer">       
+<footer class="footer">
+     <p>Copyright ©</p>      
 </footer>
 </html>
